temporary fix, using pickadate with browserify, using jquery from window.$

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "README.md",
     "Gruntfile.js"
   ],
+  "main": "index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/amsul/pickadate.js.git"
