added index.js to package.json files

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "lib",
     "tests",
     "README.md",
-    "Gruntfile.js"
+    "Gruntfile.js",
+    "index.js"
   ],
   "main": "index.js",
   "repository": {
